--- a/conf.d/pplus-true/tcpjson.conf
+++ b/conf.d/pplus-true/tcpjson.conf
@@ -15,9 +15,19 @@ filter {
     grok {
         match => ["uuid", "%{GREEDYDATA:[@metadata][uuid]}"]
     }
-    if [type_log] =~ "bluecoat" {
+    if [type_log] =~ "bluecoat1" {
         csv {
             columns => ["syslogmonth", "syslogdatetime", "syslogtime", "source", "date", "time", "time-taken", "c-ip", "sc-status", "s-action", "sc-bytes", "cs-bytes", "cs-method", "cs-uri-scheme", "cs-host", "cs-uri-port", "cs-uri-path", "cs-uri-query", "cs-username", "cs-auth-group", "s-supplier-name", "rs(Content-Type)", "cs(Referer)", "cs(User-Agent)", "sc-filter-result", "cs-categories", "x-virus-id", "s-ip"]
+            separator => " "
+        }
+        mutate {
+            add_field => { "syslogdate" => "%{syslogmonth} %{syslogdatetime} %{syslogtime}" }
+            remove_field => [ "syslogmonth","syslogdatetime","syslogtime" ]
+        }
+    }
+    if [type_log] =~ "bluecoat" {
+        csv {
+            columns => ["syslogmonth", "syslogdatetime", "syslogtime", "source","date", "time", "time-taken", "c-ip", "cs-username", "cs-auth-group", "x-exception-id", "sc-filter-result", "cs-categories", "cs(Referer)", "sc-status", "s-action", "cs-method", "rs(Content-Type)", "cs-uri-scheme", "cs-host", "cs-uri-port", "cs-uri-path", "cs-uri-query", "cs-uri-extension", "cs(User-Agent)", "s-ip", "sc-bytes", "cs-bytes", "x-virus-id", "x-bluecoat-application-name", "x-bluecoat-application-operation"]
             separator => " "
         }
         mutate {
