--- a/conf.d/pplus-true/tcpjson.conf
+++ b/conf.d/pplus-true/tcpjson.conf
@@ -59,7 +59,7 @@ filter {
             }
             grok {
                 match => ["message", "%{SYSLOGTIMESTAMP:syslogdate} %{IPORHOST:source} .*ASP_SFW_DELETE_FLOW.* %{IP:srcip}:%{INT:srcport}  ->  %{IP:dstip}:%{INT:dstport}.*\(%{DATA:ntype}\)"]
-            }
+            }:56:e1" dstmac="0:c:29:6a:35:64" srcip="192.168.1.41" dstip="119.28.48.223" proto="17" length="82" tos="0x00" prec="0x00" ttl="127" srcport="51713" dstport="5
             #mutate {
             #    remove_tag => [ "_grokparsefailure" ]
             #}
@@ -72,8 +72,8 @@ filter {
                 remove_tag => [ "_grokparsefailure" ]
             }
         }
-	if [message] =~ "JSERVICES_SESSION" {
-	    grok {
+    	if [message] =~ "JSERVICES_SESSION" {
+    	    grok {
                 match => [
                     "message", "%{SYSLOGTIMESTAMP:syslogdate} %{IPORHOST:source} %{DATA} application:%{DATA}, %{DATA} %{IP:src_ip}:%{INT:src_port} \[%{IP:nat_ip}:%{INT:nat_port}\]%{SPACE}->%{SPACE}%{IP:dst_ip}:%{INT:dst_port} \(%{DATA:ntype}\)",
                     "message", "%{SYSLOGTIMESTAMP:syslogdate} %{IPORHOST:source} %{DATA} application:%{DATA}, %{DATA} %{IP:src_ip}:%{INT:src_port}%{SPACE}->%{SPACE}%{IP:dst_ip}:%{INT:dst_port} \(%{DATA:ntype}\)"
