--- a/conf.d/etc/logstash.conf
+++ b/conf.d/etc/logstash.conf
@@ -61,5 +61,64 @@ output {
     }
 }
 
+input {
+    kafka {
+        zk_connect => "collector01:2181,collector02:2181,collector03:2181"
+        topic_id => 'rawlogs'
+    }
+}
+
+filter {
+    grok {
+        match => ["path", "\/home\/kafka\/%{IPORHOST:sourcedata}\_%{INT:[@metadata][year]}%{INT:[@metadata][month]}%{INT:[@metadata][day]}%{INT:[@metadata][hour]}%{INT:[@metadata][minute]}\.log"]
+    }
+    grok {
+        match => ["message", "%{SYSLOGTIMESTAMP:log_timestamp} %{IPORHOST:host} %{SYSLOGPROG}: %{GREEDYDATA:raw_message}"]
+    }
+    date {
+        match => [ "log_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+        locale => "en"
+        target => "received_at"
+    }
+    mutate {
+        remove_field => [ "log_timestamp" ]
+    }
+}
+
+
+output {
+    stdout { codec => rubydebug }
+    elasticsearch {
+        hosts => ["127.0.0.1:9200"]
+        codec => "plain"
+        workers => 8
+        index => "logstash-%{+YYYY.MM.dd}"
+        manage_template => true
+        template_name => "logstash"
+        template_overwrite => false
+        flush_size => 500
+        idle_flush_time => 1
+    }
+
+    file {
+        codec => "plain"
+        message_format => "%{message}"
+        path => ["/home/softnixlogger/groups/514/%{sourcedata}/%{[@metadata][year]}-%{[@metadata][month]}-%{[@metadata][day]}/%{[@metadata][hour]}/%{[@metadata][minute]}.log"]
+    }
+
+    file {
+        codec => "plain"
+        message_format => "."
+        path => ["/home/data/dev/514/%{sourcedata}/daemon/info"]
+    }
+
+    if ("_grokparsefailure" in [tags]) {
+        file {
+            codec => "plain"
+            message_format => "%{message}"
+            path => ["/home/softnixlogger/grokfailed/514/%{sourcedata}/%{[@metadata][year]}-%{[@metadata][month]}-%{[@metadata][day]}/%{[@metadata][hour]}/%{[@metadata][minute]}.log"]
+        }
+    }
+}
 
 
