--- a/conf.d/filter-common.conf
+++ b/conf.d/filter-common.conf
@@ -13,6 +13,6 @@ filter {
         target => "timestamp"
     }
     mutate {
-        remove_field => [ "log_timestamp","@timestamp" ]
+        remove_field => [ "log_timestamp", "tags", "@version" ]
     }
 }
