--- a/conf.d/pplus-true/tcpjson.conf
+++ b/conf.d/pplus-true/tcpjson.conf
@@ -27,6 +27,12 @@ filter {
     }
     if [type_log] =~ "bluecoat" {
         csv {
+            columns => ["date","localtime","time-taken","c-ip","sc-status","s-action","sc-bytes","cs-bytes","cs-method","cs-uri-scheme","cs-host","cs-uri-port","cs-uri-path","cs-uri-query","cs-username","cs-auth-group","s-hierarchy","s-supplier-name","rs(Content-Type)","cs(Referer)","cs(User-Agent)","sc-filter-result","cs-categories","x-virus-id","s-ip","s-sitename"]
+            separator => " "
+        }
+    }
+    if [type_log] =~ "bluecoat" {
+        csv {
             columns => ["syslogmonth", "syslogdatetime", "syslogtime", "source","date", "time", "time-taken", "c-ip", "cs-username", "cs-auth-group", "x-exception-id", "sc-filter-result", "cs-categories", "cs(Referer)", "sc-status", "s-action", "cs-method", "rs(Content-Type)", "cs-uri-scheme", "cs-host", "cs-uri-port", "cs-uri-path", "cs-uri-query", "cs-uri-extension", "cs(User-Agent)", "s-ip", "sc-bytes", "cs-bytes", "x-virus-id", "x-bluecoat-application-name", "x-bluecoat-application-operation"]
             separator => " "
         }
