add project cat

--- a/conf.d/output-file.conf
+++ b/conf.d/output-file.conf
@@ -1,20 +1,17 @@
 output {
     file {
-        codec => "plain"
-        message_format => "%{message}"
+        codec => line { format => "%{message}" }
         path => ["/home/softnixlogger/groups/514/%{sourcedata}/%{[@metadata][year]}-%{[@metadata][month]}-%{[@metadata][day]}/%{[@metadata][hour]}/%{Fac}/%{Pri}.log"]
     }
 
     file {
-        codec => "plain"
-        message_format => "."
+        codec => line { format => "." }
         path => ["/home/data/dev/514/%{sourcedata}/%{Fac}/%{Pri}"]
     }
 
     if ("_grokparsefailure" in [tags]) {
         file {
-            codec => "plain"
-            message_format => "%{message}"
+            codec => line { format => "%{message}" }
             path => ["/home/softnixlogger/grokfailed/514/%{sourcedata}/%{[@metadata][year]}-%{[@metadata][month]}-%{[@metadata][day]}/%{[@metadata][hour]}/%{Fac}/%{Pri}.log"]
         }
     }
