--- a/conf.d/filter-common.conf
+++ b/conf.d/filter-common.conf
@@ -2,10 +2,23 @@ filter {
     grok {
         match => ["path", "\/home\/kafka\/%{IPORHOST:sourcedata}_%{INT:[@metadata][year]}%{INT:[@metadata][month]}%{INT:[@metadata][day]}%{INT:[@metadata][hour]}%{INT:[@metadata][minute]}_%{INT:[@metadata][uniqid]}\.log"]
     }
+
     grok {
         patterns_dir => ["/etc/logstash/patterns"]
         match => ["message", "%{COMMONSYSLOG}"]
     }
+
+    if [type_log] =~ "juniper" {
+        grok {
+            patterns_dir => ["/etc/logstash/patterns"]
+            match => [
+                "raw_message", "%{NETSCREENLOG1}",
+                "raw_message", "%{NETSCREENLOG2}",
+                "raw_message", "%{NETSCREENLOG3}"
+            ]
+        }
+    }
+
     date {
         match => [ "log_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
         #locale => "en"
@@ -13,6 +26,6 @@ filter {
         target => "timestamp"
     }
     mutate {
-        remove_field => [ "log_timestamp", "tags", "@version" ]
+        remove_field => [ "log_timestamp", "tags", "@version", "raw_message" ]
     }
 }
